--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8082
 # local testing db
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:productservicedb
 spring.datasource.username=cbd_local
 spring.datasource.password=cbd
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
