--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.mvc.pathmatch.matching-strategy = ant_path_matcher
 server.port = 8086
+warehouse.components.url=http:localhost:8081/components
+warehouse.products.url=http:localhost:8081/products
 spring.profiles.active=prod
